Fix string error in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ if (CMAKE_CROSSCOMPILING)
 endif()
 
 set(MINGW_DLL_BUILD_TRIPLES "")
-string(REPLACE "," ";" DLL_BUILD_ARCHITECTURES_LIST ${DLL_BUILD_ARCHITECTURES})
+string(REPLACE "," ";" DLL_BUILD_ARCHITECTURES_LIST "${DLL_BUILD_ARCHITECTURES}")
 foreach(DLL_ARCH IN LISTS DLL_BUILD_ARCHITECTURES_LIST)
   if (${DLL_ARCH} STREQUAL "aarch64")
     list(APPEND MINGW_DLL_BUILD_TRIPLES "aarch64-w64-mingw32")
