--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,3 +1,8 @@
 {
-    "image": "ghcr.io/xtruder/nix-devcontainer:latest"
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
+    "mounts": [
+        "source=${localEnv:HOME}/.ssh,target=/home/code/.ssh,type=bind,consistency=cached"
+    ]
 }
